Fixed issues on Order page with scrolling Add ID bar, as well as z-index problems

--- a/IMS/IMS/static/style.css
+++ b/IMS/IMS/static/style.css
@@ -51,6 +51,8 @@ body {
 }
 .add-order-column{
   display: none;
+  position:sticky;
+  z-index: 1;
 }
 #order-product-button{
   display: flex;
@@ -105,7 +107,7 @@ body {
   padding: 20px;
   border-radius: 10px;
   border: 2px solid black;
-  z-index: 2;
+  z-index: 3;
 }
 .inventory-buttons{
   display: flex;
